# ideagen_crewai

./: LICENSE  README.md  pyproject.toml
ideagen_crewai/: idea_generator.py
