[tool.poetry]
name = "ideagen-crewai"
version = "0.1.0"
description = "Idea Generator with CrewAI"
authors = ["Glenn Lugod <glenn.lugod@users.noreply>"]
license = "AFL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
